--- a/index.html
+++ b/index.html
@@ -85,33 +85,58 @@
                 </div>
 
             </div>
-            <div>
-                <h3>CONTACT ME</h3>
-                <P>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </P>
+
+            <div class="row">
+                <div class="col-12">
+                    <h3>CONTACT ME</h3>
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </P>
+
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="row bg-info">
+                <div class="col sm-12 md-4">
+
+                    <h4>LOCATION</h4>
+                    <P>
+                        3481 Melrose Place Beverly Hills, CA 90210
+                    </P>
+                </div>
 
             </div>
+            <div class="row bg-danger">
+                <div class="col sm-12 md-4">
 
-        </main>
-        <footer>
-            <h4>LOCATION</h4>
-            <P>
-                3481 Melrose Place Beverly Hills, CA 90210
-            </P>
-            <h4>AROUND THE WEB</h4>
-            <P>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </P>
-            <h4>ABOUT</h4>
-            <P>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <a href="#">consequat</a>.
-            </P>
+                    <h4>AROUND THE WEB</h4>
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </P>
+                </div>
+            </div>
 
-            <p>
-                Copyright&copy:Your Website 2016
-            </p>
+            <div class "row bg-primary">
+                <div class="col sm-12 md-4">
+
+                    <h4>ABOUT</h4>
+                    <P>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <a href="#">consequat</a>.
+                    </P>
+
+                </div>
+            </div>
+            <div class="row bg-danger">
+                <div class="col-12">
+                    <p>
+                        Copyright&copy:Your Website 2016
+                    </p>
+
+                </div>
+            </div>
         </footer>
 
 
